fix:missed a file while copying

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,4 +1,5 @@
 fastapi
+fastapi[standard]
 uvicorn
 google-auth
 requests
@@ -6,3 +7,4 @@ httpx
 python-jose[cryptography]
 python-dotenv
 starlette-sessions
+supabase
