--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@heroicons/vue": "^2.2.0",
     "@supabase/supabase-js": "^2.75.0",
     "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "axios": "^1.12.2",
     "better-auth": "^1.3.27",
     "chart.js": "^4.5.0",
     "chartjs-adapter-date-fns": "^3.0.0",
